tests: criando os testes para o serviço de compra de ingressos