@@ -6,10 +6,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -37,18 +34,18 @@ public class ShowServicesTest {
             Double precoNormal = 10.0;
             Boolean isDataEspecial = false;
             Double descontoLote = 0.00;
-            Double vip = 0.30;
+            double vip = 0.30;
 
             // Execute o método criarShow
             showServices.criarShow(data, artista, cache, totalDespesas, quantLotes, quantIngressosPorLote, precoNormal, isDataEspecial, descontoLote, vip);
 
             // Verificar se o show foi salvo corretamente
-            ShowModel show = ((InMemoryShowRepository) showRepository).getSavedShow();
+            ShowModel show = showRepository.findById(data, artista).get();
             assertNotNull(show);
 
             List<LoteModel> lotes = show.getLotes();
             assertEquals(quantLotes, lotes.size());
-            LoteModel lote = lotes.get(0);
+            LoteModel lote = lotes.getFirst();
             assertEquals(quantIngressosPorLote, lote.getIngressos().size());
 
             // Verificar o desconto
@@ -86,12 +83,12 @@ public class ShowServicesTest {
             showServices.criarShow(data, artista, cache, totalDespesas, quantLotes, quantIngressosPorLote, precoNormal, isDataEspecial, descontoLote, vip);
 
             // Verificar se o show foi salvo corretamente
-            ShowModel show = ((InMemoryShowRepository) showRepository).getSavedShow();
+            ShowModel show = showRepository.findById(data, artista).get();
             assertNotNull(show);
 
             List<LoteModel> lotes = show.getLotes();
             assertEquals(quantLotes, lotes.size());
-            LoteModel lote = lotes.get(0);
+            LoteModel lote = lotes.getFirst();
             assertEquals(quantIngressosPorLote, lote.getIngressos().size());
 
             // O desconto não deve ultrapassar 25%
@@ -115,12 +112,12 @@ public class ShowServicesTest {
             showServices.criarShow(data, artista, cache, totalDespesas, quantLotes, quantIngressosPorLote, precoNormal, isDataEspecial, descontoLote, vip);
 
             // Verificar se o show foi salvo corretamente
-            ShowModel show = ((InMemoryShowRepository) showRepository).getSavedShow();
+            ShowModel show = showRepository.findById(data, artista).get();
             assertNotNull(show);
 
             List<LoteModel> lotes = show.getLotes();
             assertEquals(quantLotes, lotes.size());
-            LoteModel lote = lotes.get(0);
+            LoteModel lote = lotes.getFirst();
             assertEquals(quantIngressosPorLote, lote.getIngressos().size());
         }
 
@@ -141,7 +138,7 @@ public class ShowServicesTest {
             showServices.criarShow(data, artista, cache, totalDespesas, quantLotes, quantIngressosPorLote, precoNormal, isDataEspecial, descontoLote, vip);
 
             // Verificar se o show foi salvo corretamente
-            ShowModel show = ((InMemoryShowRepository) showRepository).getSavedShow();
+            ShowModel show = showRepository.findById(data, artista).get();
             assertNotNull(show);
             assertTrue(show.getDespesasInfra() > 2000.0); // Verifica se as despesas foram ajustadas para data especial
             assertEquals(2300.0, show.getDespesasInfra());
@@ -164,12 +161,12 @@ public class ShowServicesTest {
             showServices.criarShow(data, artista, cache, totalDespesas, quantLotes, quantIngressosPorLote, precoNormal, isDataEspecial, descontoLote, vip);
 
             // Verificar se o show foi salvo corretamente
-            ShowModel show = ((InMemoryShowRepository) showRepository).getSavedShow();
+            ShowModel show = showRepository.findById(data, artista).get();
             assertNotNull(show);
 
             List<LoteModel> lotes = show.getLotes();
             assertEquals(quantLotes, lotes.size());
-            LoteModel lote = lotes.get(0);
+            LoteModel lote = lotes.getFirst();
             assertEquals(0, lote.getDesconto());
         }
     }
@@ -193,16 +190,47 @@ public class ShowServicesTest {
             showServices.criarShow(data, artista, cache, totalDespesas, quantLotes, quantIngressosPorLote, precoNormal, isDataEspecial, descontoLote, vip);
 
             // Recupera o show salvo
-            ShowModel show = ((InMemoryShowRepository) showRepository).getSavedShow();
-            LoteModel lote = show.getLotes().get(0);
-            IngressoModel ingresso = lote.getIngressos().get(0);
+            ShowModel show = showRepository.findById(data, artista).get();
+            LoteModel lote = show.getLotes().getFirst();
+            IngressoModel ingresso = lote.getIngressos().getFirst();
 
             // Compra um ingresso
             IngressoModel comprado = showServices.comprarIngresso(data, artista, lote.getId());
 
             assertNotNull(comprado);
             assertEquals(ingresso, comprado);
-            assertTrue(lote.getIngressos().isEmpty()); // Verifica que o ingresso foi removido
+            assertTrue(lote.getIngressos().getFirst().isVendido());
+        }
+
+        @Test
+        public void testComprarIngressoComLoteTodosComprados() {
+            Date data = new Date();
+            String artista = "Artista Teste";
+            Double cache = 1000.0;
+            Double totalDespesas = 2000.0;
+            Integer quantLotes = 1;
+            Integer quantIngressosPorLote = 10;
+            Double precoNormal = 10.0;
+            Boolean isDataEspecial = false;
+            Double descontoLote = 0.;
+            Double vip = 0.30;
+
+            // Cria o show
+            showServices.criarShow(data, artista, cache, totalDespesas, quantLotes, quantIngressosPorLote, precoNormal, isDataEspecial, descontoLote, vip);
+
+            // Recupera o show salvo
+            ShowModel show = showRepository.findById(data, artista).get();
+            LoteModel lote = show.getLotes().getFirst();
+            for (int i = 0; i < 10; i++) {
+                // Compra um ingresso
+                showServices.comprarIngresso(data, artista, lote.getId());
+            }
+
+
+            // Tenta comprar um ingresso
+            Exception exception = assertThrows(IllegalStateException.class, () -> showServices.comprarIngresso(data, artista, lote.getId()));
+
+            assertEquals("Nenhum ingresso disponível para o lote", exception.getMessage());
         }
 
         @Test
@@ -222,13 +250,11 @@ public class ShowServicesTest {
             showServices.criarShow(data, artista, cache, totalDespesas, quantLotes, quantIngressosPorLote, precoNormal, isDataEspecial, descontoLote, vip);
 
             // Recupera o show salvo
-            ShowModel show = ((InMemoryShowRepository) showRepository).getSavedShow();
-            LoteModel lote = show.getLotes().get(0);
+            ShowModel show = showRepository.findById(data, artista).get();
+            LoteModel lote = show.getLotes().getFirst();
 
             // Tenta comprar um ingresso
-            Exception exception = assertThrows(IllegalStateException.class, () -> {
-                showServices.comprarIngresso(data, artista, lote.getId());
-            });
+            Exception exception = assertThrows(IllegalStateException.class, () -> showServices.comprarIngresso(data, artista, lote.getId()));
 
             assertEquals("Nenhum ingresso disponível para o lote", exception.getMessage());
         }
@@ -250,7 +276,6 @@ public class ShowServicesTest {
             showServices.criarShow(data, artista, cache, totalDespesas, quantLotes, quantIngressosPorLote, precoNormal, isDataEspecial, descontoLote, vip);
 
             // Recupera o show salvo
-            ShowModel show = ((InMemoryShowRepository) showRepository).getSavedShow();
 
             // Tenta comprar um ingresso de um lote inexistente
             Exception exception = assertThrows(IllegalArgumentException.class, () -> {
@@ -265,17 +290,19 @@ public class ShowServicesTest {
 }
 
 class InMemoryShowRepository implements ShowRepository {
-    private ShowModel savedShow;
+    private final Map<String, ShowModel> database = new HashMap<>();
 
     @Override
     public ShowModel save(ShowModel show) {
-        this.savedShow = show;
+        String key = generateKey(show.getData(), show.getArtista());
+        database.put(key, show);
         return show;
     }
 
     @Override
     public Optional<ShowModel> findById(Date id, String artista) {
-        return Optional.empty();
+        String key = generateKey(id, artista);
+        return Optional.ofNullable(database.get(key));
     }
 
     @Override
@@ -288,7 +315,7 @@ class InMemoryShowRepository implements ShowRepository {
 
     }
 
-    public ShowModel getSavedShow() {
-        return savedShow;
+    private String generateKey(Date data, String artista) {
+        return data.toString() + "|" + artista;
     }
 }
